# Pogoda-AirportPL2

./: README.md  electron-main.cjs  metadata.json  package-lock.json  package.json  preload.cjs  server.ts
.github/workflows/: auto-pr.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
