[package]
name = "pogoda-krk"
version = "1.0.0"
description = "Minimalistyczny widżet pogodowy"
authors = ["Kraków Resident"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5.1" }

[dependencies]
tauri = { version = "1.6.1", features = ["shell-open", "system-tray"] }
tauri-plugin-window-state = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking"] }
regex = "1.10"
chrono = "0.4"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
